# mne-denoise

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  api.html  codecov.yml  development.html  dss.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
_downloads/023652df07ce296ebfc116f4a3b79d73/: plot_04_spectral_dss.ipynb
_downloads/4b31d2234aed7d8787286cabcdd0a313/: plot_09_custom_bias.ipynb
_downloads/4f900b7390ae60d16684087b140f9fa9/: robust_dss_tutorial.ipynb
_downloads/60a509f22fefc650c731c7bed38b6c2c/: plot_10_benchmarking.ipynb
_downloads/631d035bca8191e4ddb0fa517020733d/: plot_10_benchmarking.py
_downloads/74f2c3a751a6b3d071d2545f6381a99c/: plot_05_periodic_dss.ipynb
_downloads/7da1f3d2ca32f233e4d91a0ff4f58b71/: plot_07_spectrogram_dss.ipynb
_downloads/7f0b3885b28faa9f36f4428f6ae9d5fc/: plot_06_temporal_dss.ipynb
_downloads/8592f50245e55e26823dae95bd2e3110/: plot_03_evoked_responses.ipynb
_downloads/9b30b9171cad19787f1fc54412450abf/: plot_02_artifact_correction.ipynb
_downloads/b203274b2573d210c7d604f1dcef3ed6/: plot_01_dss_fundamentals.ipynb
_downloads/bafd12779eb9a6fbeed6b01ddf37d477/: plot_06_temporal_dss.py
_downloads/d879977c38fa05c9d9c3334aaa9a66e9/: plot_08_blind_source_separation.ipynb
_downloads/d9affb40ef75ff70bc878d3328b4dd15/: plot_11_wiener_masking.ipynb
_modules/: index.html
_sources/: api.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  robust_dss_tutorial.rst.txt  sg_execution_times.rst.txt
about/changelog/: index.html
about/citation/: index.html
about/license/: index.html
api/core/: index.html
api/noise-detection/: index.html
api/utilities/: index.html
auto_examples/: index.html  robust_dss_tutorial.html  sg_execution_times.html
auto_examples/dss/: index.html  plot_01_dss_fundamentals.html  plot_02_artifact_correction.html  plot_03_evoked_responses.html  plot_04_spectral_dss.html  plot_05_periodic_dss.html  plot_06_temporal_dss.html  plot_07_spectrogram_dss.html  plot_08_blind_source_separation.html  plot_09_custom_bias.html  plot_10_benchmarking.html  plot_11_wiener_masking.html  plot_12_joint_dss.html  sg_execution_times.html
auto_examples/zapline/: plot_01_basic_usage.html  plot_02_parameter_tuning.html  plot_03_epoched_data.html  plot_04_adaptive_mode.html  plot_05_adaptive_advanced.html  sg_execution_times.html
developer-guide/contributing/: index.html
developer-guide/development/: index.html
developer-guide/release/: index.html
docs/: Makefile  api.rst  conf.py  development.rst  dss.md  getting-started.rst  index.rst  sg_execution_times.rst
docs/changes/: README.md  template.jinja
examples/: README.rst  basic_usage.py  robust_dss_tutorial.py
examples/data/: README
examples/dss/: README.rst  _legacy_plot_01_basic_dss.py  _legacy_plot_03_artifact_removal.py  _legacy_plot_06_bias_functions.py  _legacy_plot_06_paper_replication.py  plot_01_dss_fundamentals.py  plot_02_artifact_correction.py  plot_02_blind_ica.py  plot_03_evoked_responses.py  plot_04_denoisers.py  plot_04_spectral_dss.py  plot_05_evoked_enhancement.py  plot_05_fastica_equivalence.py  plot_05_periodic_dss.py  plot_06_temporal_dss.py  plot_07_frequency_tools.py  plot_07_spectrogram_dss.py  plot_08_blind_source_separation.py  plot_08_snr_comparison.py  plot_09_custom_bias.py  plot_10_benchmarking.py  plot_11_wiener_masking.py  plot_12_joint_dss.py  plot_artifact_correction.py  plot_evoked_enhancement.py  plot_ica_sources.py  plot_masking_enhancement.py  plot_periodic_enhancement.py  plot_spectral_enhancement.py  plot_spectrogram_enhancement.py
examples/tutorials/: paper1_sarela_valpola_2005.ipynb  paper2_decheveigne_simon_2008.ipynb  paper3_zapline_2020.ipynb
examples/zapline/: README.rst  _legacy_plot_01_simulated_data.py  _legacy_plot_02_mne_integration.py  _legacy_plot_03_algorithm_deep_dive.py  _legacy_plot_04_zapline_plus.py  plot_01_basic_usage.py  plot_01_zapline_fundamentals.py  plot_02_parameter_tuning.py  plot_02_zapline_parameters.py  plot_03_epoched_data.py  plot_03_zapline_epochs.py  plot_04_adaptive_mode.py  plot_04_zapline_plus.py  plot_04_zapline_plus_paper.py  plot_05_adaptive_advanced.py  plot_05_zapline_plus_advanced.py
mne_denoise/: __init__.py  _mne.py  core.py  dss.py  utils.py  zapline.py
mne_denoise/dss/: __init__.py  core.py  iterative.py  jdss.py  linear.py  mne_integration.py  narrowband_scan.py  nonlinear.py  preprocessing.py  ssvep.py  tsr.py  whitening.py  zapline.py
mne_denoise/viz/: __init__.py  _utils.py  comparison.py  components.py  zapline.py
mne_denoise/zapline/: __init__.py  _legacy_noise_detection.py  adaptive.py  api.py  cleanline.py  core.py  estimator.py  linear.py  plus.py
pyzaplineplus/: __init__.py  _mne.py
tests/: conftest.py  test_cleanline.py  test_denoisers.py  test_dss.py  test_ica_denoisers.py  test_jdss.py  test_line.py  test_linear_dss.py  test_masking_denoisers.py  test_nonlinear_dss.py  test_periodic_denoisers.py  test_pipelines.py  test_viz.py  test_zapline_adaptive.py  test_zapline_core.py  test_zapline_estimator.py  test_zapline_plus.py
tests/denoisers/: test_artifact.py  test_averaging.py  test_base.py  test_evoked.py  test_ica.py  test_masking.py  test_periodic.py  test_spectral.py  test_spectrogram.py  test_temporal.py
tests/parity/: __init__.py  compare_with_matlab.py  run_dss_parity.py  run_parity_tests.py  test_dss0_parity.py  test_zapline_parity.py
tests/utils/: test_convergence.py  test_covariance.py  test_whitening.py
tests/variants/: test_narrowband.py  test_ssvep.py  test_tsr.py
user-guide/examples/: index.html
user-guide/installation/: index.html
(+68 files in other folders)
