[build-system]
requires = [
  "setuptools>=64",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mne-denoise"
version = "0.0.1"
description = "Denoising Source Separation (DSS) and artifact removal algorithms for MNE-Python."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Sina Esmaeili", email = "sina.esmaeili@umontreal.ca" },
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedi@umontreal.ca" },
]
maintainers = [
  { name = "Sina Esmaeili", email = "sina.esmaeili@umontreal.ca" },
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedi@umontreal.ca" },
]
keywords = [
  "mne",
  "denoising",
  "dss",
  "zapline",
  "neuroscience",
  "electrophysiology",
]


classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "mne>=1.0",
  "numpy>=1.21",
  "scipy>=1.6",
  "matplotlib>=3.5",
  "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/mne-tools/mne-denoise"
Repository = "https://github.com/mne-tools/mne-denoise"
Issues = "https://github.com/mne-tools/mne-denoise/issues"

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "build>=1.0.0",
  "twine>=4.0.0",
  "mypy>=1.6.0",
  "pre-commit>=3.4.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "types-setuptools",
]
docs = [
  "mne>=1.0",
  "numpydoc>=1.6.0",
  "pydata-sphinx-theme>=0.15.2",
  "sphinx>=7.1.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx-gallery>=0.14.0",
  "myst-parser>=2.0.0",
]
all = [
  "ruff>=0.1.0",
  "mypy>=1.6.0",
  "pre-commit>=3.4.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "types-setuptools",
  "mne>=1.0",
  "numpydoc>=1.6.0",
  "pydata-sphinx-theme>=0.15.2",
  "sphinx>=7.1.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "scikit-learn>=1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [""]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = [
  "E501", "E731", "E402", "E722",
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D203", # One-blank-line-before-class (conflicts with D211)
  "D212", # Multi-line-summary-first-line (conflicts with D213)
  "D105", # Missing docstring in magic method
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["D103"]
"examples/**" = ["D", "E402"] # E402 often happens in examples with magics/paths

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers --strict-config --doctest-modules --cov=mne_denoise"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mne_denoise"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
